# hermes-dashboard

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: collector.py  main.py
backend/tests/: test_collector.py  test_dashboard_api.py  test_health.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/api/: dashboard-snapshot.json  dashboard.js
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/lib/: dashboard.ts
frontend/src/test/: theme.test.ts  vercel-config.test.ts
